| Summary: | ASTERISK-29954: app_meetme: Emit warning if conference not found | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-03-05 09:38:22.000-0600 | Date Closed: | 2022-04-08 11:22:34 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_meetme |
| Versions: | 18.10.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If a conference is not found, there is currently no indication that there is any problem at all. The only message is a core debug, even though this is a user error that needs to be fixed.
This changes the debug to a WARNING. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-03-05 09:38:22.826-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-04-08 11:22:35.698-0500 Change 18187 merged by Joshua Colp: app_meetme: Emit warning if conference not found. [https://gerrit.asterisk.org/c/asterisk/+/18187|https://gerrit.asterisk.org/c/asterisk/+/18187] By: Friendly Automation (friendly-automation) 2022-04-08 11:24:14.332-0500 Change 18345 merged by Friendly Automation: app_meetme: Emit warning if conference not found. [https://gerrit.asterisk.org/c/asterisk/+/18345|https://gerrit.asterisk.org/c/asterisk/+/18345] By: Friendly Automation (friendly-automation) 2022-04-08 11:24:24.179-0500 Change 18343 merged by Friendly Automation: app_meetme: Emit warning if conference not found. [https://gerrit.asterisk.org/c/asterisk/+/18343|https://gerrit.asterisk.org/c/asterisk/+/18343] By: Friendly Automation (friendly-automation) 2022-04-08 11:31:02.902-0500 Change 18344 merged by Joshua Colp: app_meetme: Emit warning if conference not found. [https://gerrit.asterisk.org/c/asterisk/+/18344|https://gerrit.asterisk.org/c/asterisk/+/18344] | ||